--- a/src/sass/helpers/_colors.scss
+++ b/src/sass/helpers/_colors.scss
@@ -34,3 +34,8 @@ $color__nero:        #212121;
 $color__grey:        #757575;
 $color__silver:      #bdbdbd;
 $color__snow:        #fafafa;
+
+
+// Defaults Colors
+// input:focus - the same on all browsers
+$color__cornflower-blue: #4d90fe;
