--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -134,6 +134,10 @@
     @import 'components/white-frame';
 
 
+    // *--------- MODAL ---------*
+    @import 'components/modal';
+
+
 // ---------------------
 //     MODULES
 // ---------------------
