--- a/src/sass/base/_extends.scss
+++ b/src/sass/base/_extends.scss
@@ -19,3 +19,49 @@
         color: $color__white;
     }
 }
+
+
+// %loading
+$loading__after__border: 5px solid $primary-color !default;
+
+
+%loading {
+    position: relative;
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        display: block;
+        z-index: 5;
+        left: 0;
+        top: 0;
+    }
+    &:before {
+        width: 100%;
+        height: 100%;
+    }
+    &::after {
+        width: 54px;
+        height: 54px;
+        right: 0;
+        bottom: 0;
+        border-radius: 50%;
+        border: $loading__after__border;
+        border-right-color: transparent;
+        margin: auto;
+        animation: rotate-0-360 1s ease infinite;
+    }
+    & > * {
+        @include opacity(0.5);
+    }
+}
+
+
+@include keyframes('rotate-0-360') {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
