--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -13,14 +13,11 @@ $contact-form-title__font-size: 1.35em !default;
 // .contact-form__label
 $contact-form__label__font-size: 1.05em !default;
 $contact-form__label__font-weight: $font-weight__bolder !default;
-// .contact-form__input-alerts
-$contact-form__input-alerts__font-size: 0.95em !default;
-$contact-form__input-alerts__font-weight: $font-weight__bolder !default;
-$contact-form__input-alerts__color: $color__cinnabar !default;
 // .contact-form__input & .contact-form__textarea
 $contact-form__input-textarea__border: 1px solid lighten($divider-color, 10%) !default;
 // .contact-form__input:focus & .contact-form__textarea:focus
 $contact-form__input-textarea__focus__background-color: lighten($color__snow, 1%) !default;
+$contact-form__input-textarea__focus__outline-color: $color__cornflower-blue !default;
 
 // .contact-info__list > li
 $contact-info__list__li__border-bottom: 1px solid $divider-color !default;
@@ -53,17 +50,6 @@ $contact-info__list__li__border-bottom: 1px solid $divider-color !default;
                 padding: 5px 0;
                 margin: 15px 0;
             }
-            &-alerts {
-                font-size: $contact-form__input-alerts__font-size;
-                font-weight: $contact-form__input-alerts__font-weight;
-                color: $contact-form__input-alerts__color;
-                & > * {
-                    display: none;
-                }
-                & > *[data-alert] {
-                    margin-top: 0.5em;
-                }
-            }
         }
         &__textarea {
             min-height: 150px;
@@ -79,9 +65,13 @@ $contact-info__list__li__border-bottom: 1px solid $divider-color !default;
         &__textarea {
             width: 100%;
             border: $contact-form__input-textarea__border;
-            transition: 0.15s background-color linear;
+            outline: 1px solid transparent;
+            box-shadow: none;
+            transition: 0.15s background-color ease-in-out,
+                        0.15s outline-color ease-in-out;
             &:focus {
                 background-color: $contact-form__input-textarea__focus__background-color;
+                outline-color: $contact-form__input-textarea__focus__outline-color;
             }
         }
         &__button {
@@ -90,6 +80,9 @@ $contact-info__list__li__border-bottom: 1px solid $divider-color !default;
             display: block;
             border-width: 2px;
             margin: 25px auto 0;
+        }
+        &-loading {
+            @extend %loading;
         }
     }
     &-info {
