WO: main-header component

--- a/src/sass/base/_extends.scss
+++ b/src/sass/base/_extends.scss
@@ -27,6 +27,7 @@ $loading__after__border: 5px solid $primary-color !default;
 
 %loading {
     position: relative;
+    user-select: none;
     &::before,
     &::after {
         content: '';
