--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -17,7 +17,7 @@ $main-header__fixed__box-shadow: 0 0 8px 0 rgba($color__black-1, 0.8) !default;
     z-index: 10;
     left: 0;
     top: 0;
-    &__fixed {
+    &-fixed {
         background-color: $main-header__fixed__background-color;
         position: fixed;
         box-shadow: $main-header__fixed__box-shadow;
