--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1973,11 +1973,14 @@ a.link, a.no-link {
   display: inline-block;
   vertical-align: middle; }
 
-.site-nav__wrapper {
+.site-nav-wrapper {
   height: 65px; }
 
 .site-nav__list {
   list-style: none; }
+  @media (max-width: 991px) {
+    .site-nav__list {
+      display: none; } }
 
 .site-nav__link {
   height: 65px;
@@ -2015,9 +2018,21 @@ a.link, a.no-link {
       height: 3px;
       background-color: #c62828; }
 
-.language-settings {
+.site-nav__button-toggle {
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  display: none;
+  border: 0;
+  outline: 0;
+  margin-top: 7.5px; }
+  @media (max-width: 991px) {
+    .site-nav__button-toggle {
+      display: block; } }
+
+.language-settings__list {
   list-style: none; }
-  .language-settings::before {
+  .language-settings__list::before {
     content: "";
     width: 1px;
     height: 20px;
@@ -2025,10 +2040,11 @@ a.link, a.no-link {
     padding-right: 15px;
     border-left: 1px solid #1565c0;
     margin-top: 22.5px; }
-  .language-settings__link {
-    padding: 20px 5px; }
-    .language-settings__link::after {
-      display: none; }
+
+.language-settings__link {
+  padding: 20px 5px; }
+  .language-settings__link::after {
+    display: none; }
 
 .section {
   padding-bottom: 163px; }
@@ -2088,6 +2104,9 @@ a.link, a.no-link {
 .home-header {
   padding: 175px 0 59px;
   margin-bottom: 25px; }
+  @media (max-width: 991px) {
+    .home-header-title {
+      font-size: 4.2em; } }
   .home-header-buttons {
     text-align: center;
     margin-top: 38px; }
@@ -2588,26 +2607,37 @@ a.link, a.no-link {
 .modal-wrapper {
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
-  display: none;
-  z-index: 999;
+  visibility: hidden;
+  z-index: -999;
   top: 0;
-  bottom: 0; }
+  bottom: 0;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  transition-delay: 0;
+  transition-duration: 0.3s;
+  transition-property: visibility, z-index, opacity;
+  transition-timing-function: ease-in-out; }
   .modal-wrapper.open {
-    display: block; }
+    visibility: visible;
+    z-index: 999;
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100); }
 
 .modal-content {
-  width: 420px;
   background-color: #fff;
   position: absolute;
-  z-index: 1000;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
+  -webkit-transform: translateY(-75%);
+      -ms-transform: translateY(-75%);
+          transform: translateY(-75%);
   padding: 25px 30px; }
-  @media screen and (max-width: 420px) {
-    .modal-content {
-      width: 100%; } }
+  .modal-content-420 {
+    width: 420px; }
+    @media screen and (max-width: 420px) {
+      .modal-content-420 {
+        width: 100%; } }
 
 *,
 *::before,
@@ -2622,6 +2652,13 @@ body {
   font-size: 1em;
   color: #212121; }
 
+@media (max-width: 1199px) {
+  .main-wrapper .section,
+  .main-footer {
+    display: none; }
+  .main-wrapper .section.home-wrapper {
+    display: block; } }
+
 .main-header {
   width: 100%;
   height: 65px;
@@ -2629,22 +2666,22 @@ body {
   z-index: 10;
   left: 0;
   top: 0; }
-  .main-header__fixed {
+  .main-header-fixed {
     background-color: #212121;
     position: fixed;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8); }
-    .main-header__fixed, .main-header__fixed.hide {
+    .main-header-fixed, .main-header-fixed.hide {
       -webkit-transform: translate3d(0, -100%, 0);
               transform: translate3d(0, -100%, 0);
       will-change: transform;
       opacity: 0;
       -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
       filter: alpha(opacity=0); }
-    .main-header__fixed.hide, .main-header__fixed.show {
+    .main-header-fixed.hide, .main-header-fixed.show {
       transition: 0.3s opacity ease-in-out, 0.3s -webkit-transform ease-in-out;
       transition: 0.3s transform ease-in-out, 0.3s opacity ease-in-out;
       transition: 0.3s transform ease-in-out, 0.3s opacity ease-in-out, 0.3s -webkit-transform ease-in-out; }
-    .main-header__fixed.show {
+    .main-header-fixed.show {
       -webkit-transform: translate3d(0, 0, 0);
               transform: translate3d(0, 0, 0);
       will-change: transform;
@@ -2701,7 +2738,7 @@ body {
 .clearfix::after {
   clear: both; }
 
-.site-nav__list, .language-settings, .about-me-list, .contact-info__list, .timeline__list, .skills__list {
+.site-nav__list, .language-settings__list, .about-me-list, .contact-info__list, .timeline__list, .skills__list {
   padding: 0;
   margin: 0; }
 
@@ -2709,7 +2746,11 @@ body {
   color: #fff; }
 
 .contact-form-loading {
-  position: relative; }
+  position: relative;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none; }
   .contact-form-loading::before, .contact-form-loading::after {
     content: '';
     position: absolute;
