--- a/src/sass/components/_language-settings.scss
+++ b/src/sass/components/_language-settings.scss
@@ -9,16 +9,18 @@ $language-settings__before__margin-top: ($site-nav__main-header__height - 20px) 
 
 
 .language-settings {
-    list-style: none;
-    @extend %no-padding-margin;
-    &::before {
-        content: "";
-        width: 1px;
-        height: 20px;
-        display: block;
-        padding-right: 15px;
-        border-left: $language-settings__before__border;
-        margin-top: $language-settings__before__margin-top;
+    &__list {
+        list-style: none;
+        @extend %no-padding-margin;
+        &::before {
+            content: "";
+            width: 1px;
+            height: 20px;
+            display: block;
+            padding-right: 15px;
+            border-left: $language-settings__before__border;
+            margin-top: $language-settings__before__margin-top;
+        }
     }
     &__link {
         padding: 20px 5px;
