--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -20,24 +20,32 @@ $modal-content__background-color: $color__white !default;
     &-wrapper {
         background-color: $modal-wrapper__background-color;
         position: fixed;
-        display: none;
-        z-index: 999;
+        visibility: hidden;
+        z-index: -999;
         top: 0;
         bottom: 0;
+        @include opacity(0);
+        transition-delay: 0;
+        transition-duration: 0.3s;
+        transition-property: visibility, z-index, opacity;
+        transition-timing-function: ease-in-out;
         &.open {
-            display: block;
+            visibility: visible;
+            z-index: 999;
+            @include opacity(1);
         }
     }
     &-content {
-        width: 420px;
+        &-420 {
+            width: 420px;
+            @media screen and (max-width: 420px) {
+                width: 100%;
+            }
+        }
         background-color: $modal-content__background-color;
         position: absolute;
-        z-index: 1000;
         top: 50%;
-        transform: translateY(-50%);
+        transform: translateY(-75%);
         padding: 25px 30px;
-        @media screen and (max-width: 420px) {
-            width: 100%;
-        }
     }
 }
