--- a/src/templates/components/sections/_about-me.pug
+++ b/src/templates/components/sections/_about-me.pug
@@ -14,12 +14,12 @@ section(id="about-me" class="section about-me-wrapper")
                     .heading-separator__line
                 p.section-header-description= data.mainWrapper.aboutMeWrapper.header.p
         .row.justify-content-center
-            .col-6
+            .col-xl-6.col-lg-6.col-md-12
                 include _about-me-profile
                 include _about-me-information-contact
                 include _about-me-attributes-qualities
-            .col-6
+            .col-xl-6.col-lg-6.col-md-12
                 include _about-me-education
                 include _about-me-experiences-courses
-            .col-8
+            .col-xl-8.col-lg-8.col-md-12
                 include _about-me-skills-technologies
