--- a/src/templates/layout/_header.pug
+++ b/src/templates/layout/_header.pug
@@ -1,14 +1,34 @@
 //-
     Main Header
 
+//-nav.site-nav-wrapper.site-nav-js
+    ul.row.align-items-center.site-nav__list
+        li
+            a(href="#home" class="site-nav__link site-nav__link-active")= data.mainHeader.siteNav.home
+        li
+            a(href="#about-me" class="site-nav__link")= data.mainHeader.siteNav.aboutMe
+        li
+            a(href="#services" class="site-nav__link")= data.mainHeader.siteNav.services
+        li
+            a(href="#portfolio" class="site-nav__link")= data.mainHeader.siteNav.portfolio
+        li
+            a(href="#contact" class="site-nav__link")= data.mainHeader.siteNav.contact
+        li
+            ul.row.language-settings__list
+                each value in langs
+                    if lang !== value
+                        li
+                            a(href="/" + value class="site-nav__link language-settings__link")= value
 header.main-header.main-header-js
     .container
         .row.no-gutters.align-items-center.justify-content-between
             a(href="/" class="site-logo__wrapper")
                 img(src="images/logo/logo.png" alt=data.mainHeader.siteLogo.alt width="94" height="28" class="site-logo__img")
             h1.text-hidden= data.mainHeader.h1
-            nav.site-nav-wrapper
-                ul.row.site-nav__list
+            button(aria-label="Site navigation toggle button" class="site-nav__button-toggle site-nav-toggle-js")
+                    span
+            nav.site-nav-wrapper.site-nav-js
+                ul.row.align-items-center.site-nav__list
                     li
                         a(href="#home" class="site-nav__link site-nav__link-active")= data.mainHeader.siteNav.home
                     li
@@ -25,4 +45,3 @@ header.main-header.main-header-js
                                 if lang !== value
                                     li
                                         a(href="/" + value class="site-nav__link language-settings__link")= value
-                button(aria-label="Site navigation toggle button" class="site-nav__button-toggle")
